--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
 install:
     - pip install --upgrade pip
     - pip install -e .
-    - pip install nose coverage
+    - pip install nose coverage datashape
 before_script:
     - nosetests --version
 script:
